# public_presentations

./: .gitignore  .nojekyll  .tmp_set_footer.py  .tmp_verify_footer.py  07.txt  08.txt  09.txt  404.html  404.qmd  CLAUDE.md  LICENSE  MEMORY.md  README.md  _quarto.yml  _quarto_internal_scss_error.scss  about.qmd  cheat_sheet.html  complete_merge.ps1  custom.scss  index.html  index.qmd  project_ai4matlectures.md  pyproject.toml  qmd_files.txt  qmd_sizes.txt  rebuild_index.py  render_log.txt  render_log_final.txt  requirements.txt  run_quarto.bat  search.json  sitemap.xml  styles.css  test_d2l.html  test_d2l.qmd  test_d2l.quarto_ipynb  test_python.html  test_python.qmd  test_python.quarto_ipynb  test_quarto_publish.html  (+5 more)
.claude/: settings.local.json
_site/: 404.html  about.html  index.html  robots.txt  search.json  sitemap.xml  test_d2l.html  test_python.html  test_quarto_publish.html
data_science_for_em/: 01_autograd.qmd  02_data_fusion.qmd  03_convnets_0.qmd  03_convnets_1.qmd  03_regression.qmd  04_cnn_class.qmd  05_gp3.qmd
internal/: materials_genomics_todo.md
materials_genomics/: BOOK_CHAPTER_MAPPING.md  BOOK_CHAPTER_MAPPING.md.old  BOOK_CHAPTER_MAPPING_UNITS3_13.html  MATERIALS_GENOMICS_MASTER_TODO.html  MATERIALS_GENOMICS_MASTER_TODO.md  REALIGNMENT_2026-05-09.md  REALIGNMENT_2026-05-13.md  REALIGNMENT_OLD_TO_NEW_MAPPING.html  REALIGNMENT_OLD_TO_NEW_MAPPING.md
mathematical_foundations_of_ai_and_ml/: CURRICULUM_NOTES_NEXT_YEAR.md  EXTERNAL_ASSETS_TODO.md  IMAGE_INTEGRATION_TODO.md  add_sections.py  fix_columns.py  style_units.py
slides/: custom.css  (+6 more)
(+1427 files in other folders)
