[project]
name = "Public presentations"
version = "0.1.0"
description = "Public presentations"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.0.0",
    "nbformat>=5.7",
    "ipykernel>=6.0",
    "d2l>=1.0.0",
    "numpy>=1.23.5",
    "scipy>=1.10.1",
    "matplotlib>=3.7.2",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "ipywidgets>=8.0.0",
    "notebook>=7.0.0",
    "jupyterlab>=4.0.0",
    "h5py>=3.10.0",
    "tqdm>=4.67.1",
    "scikit-image>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
] 